# Ph2_ACF

./: .gitignore  .gitlab-ci.yml  .setup.sh.swp  CHANGELOG  CMakeLists.txt  Makefile  README.md  monitorpage.html  out.out  runDQM.sh  run_irradtest.sh  runmake.csh  runrtest.csh  setup.sh  setup_ots.sh  start_server.sh
AMC13/: Amc13Controller.cc  Amc13Controller.h  Amc13Description.cc  Amc13Description.h  Amc13Interface.cc  Amc13Interface.h  CMakeLists.txt  Makefile
GUI/: .gitignore  GUI.pro  Makefile  startup.cpp  startup.h
GUI/Model/: beboardregisters.cpp  beboardregisters.h  beboardregistersworker.cpp  beboardregistersworker.h  calibrate.cpp  calibrate.h  calibrateworker.cpp  calibrateworker.h  cbcregisters.cpp  cbcregisters.h  cbcregisterworker.cpp  cbcregisterworker.h  cmtest.cpp  cmtest.h  cmtestworker.cpp  cmtestworker.h  hybridtest.cpp  hybridtest.h  hybridtestworker.cpp  hybridtestworker.h  settings.cpp  settings.h  systemcontroller.cpp  systemcontroller.h  systemcontrollerworker.cpp  systemcontrollerworker.h
GUI/View/: aboutbox.cpp  aboutbox.h  beboardregisterstab.cpp  beboardregisterstab.h  beboardregisterstab.ui  calibratetab.cpp  calibratetab.h  cbcregisterstab.cpp  cbcregisterstab.h  cbcregisterstab.ui  cmtesttab.cpp  (+8 more)
HWDescription/: BeBoard.cc  BeBoard.h  CMakeLists.txt  Cbc.cc  Cbc.h  CbcRegItem.h  Definition.h  FrontEndDescription.cc  FrontEndDescription.h  MPA.cc  MPA.h  Makefile  Module.cc  Module.h  Shelve.h
HWInterface/: BeBoardFWInterface.cc  BeBoardFWInterface.h  BeBoardInterface.cc  BeBoardInterface.h  CMakeLists.txt  Cbc3Fc7FWInterface.cc  Cbc3Fc7FWInterface.h  CbcInterface.cc  CbcInterface.h  CtaFWInterface.cc  CtaFWInterface.h  CtaFpgaConfig.cc  CtaFpgaConfig.h  D19cFWInterface.cc  D19cFWInterface.h  Fc7DAQFWInterface.cc  Fc7DAQFWInterface.h  FpgaConfig.cc  FpgaConfig.h  GlibFWInterface.cc  GlibFWInterface.h  GlibFpgaConfig.cc  GlibFpgaConfig.h  ICFc7FWInterface.cc  ICFc7FWInterface.h  ICGlibFWInterface.cc  ICGlibFWInterface.h  MPAGlibFWInterface.cc  MPAGlibFWInterface.h  MPAInterface.cc  MPAInterface.h  Makefile  MmcPipeInterface.cc  MmcPipeInterface.h  RegManager.cc  RegManager.h  new_CbcInterface.cc  new_CbcInterface.h
HWInterface/fc7/: MmcPipeInterface.hpp
RootWeb/: .gitignore  CMakeLists.txt  Makefile  example.sh  style.tar
RootWeb/include/: publisher.h  rootweb.hh
RootWeb/src/: example.cpp.savedWorking  publisher.cpp  rootweb.cpp
System/: CMakeLists.txt  FileParser.cc  FileParser.h  Makefile  SystemController.cc  SystemController.h
Tracker/: Makefile  ParamSet.cc  ParamSet.h  TrackerEvent.cc  TrackerEvent.h
Utils/: Antenna.cc  Antenna.h  CMakeLists.txt  CRCCalculator.cc  CRCCalculator.h  Cbc2Event.cc  Cbc2Event.h  Cbc3Event.cc  Cbc3Event.h  Cbc3EventFC7DAQ.cc  Cbc3EventFC7DAQ.h  CommonVisitors.h  ConditionDataSet.h  D19cCbc3Event.cc  D19cCbc3Event.h  D19cCbc3EventZS.cc  D19cCbc3EventZS.h  Data.cc  Data.h  Event.cc  Event.h  Exception.cc  Exception.h  FileHandler.cc  FileHandler.h  FileHeader.h  GenericPayload.cc  GenericPayload.h  MPAEvent.cc  MPAEvent.h  Makefile  SLinkEvent.cc  SLinkEvent.h  Timer.h  UsbUtilities.cc  UsbUtilities.h  Utilities.cc  Utilities.h  Visitor.h  Watchdog.cc  (+3 more)
analysis/: analyzeEvents.cpp  analyzeEvents.sh  analyzeEventsSlice.cpp
cmake/: FindCACTUS.cmake  FindPH2_ANTENNA.cmake  FindPH2_USBINSTLIB.cmake
doc/: uml.dia
firmware/: 8CBC_DIO5_glib_be.bit  TLU_Glitch_fixed.bit
macro/: plot_calibration.C
miniDAQ/: CMakeLists.txt  DQMEvent.cc  DQMEvent.h  DQMHistogrammer.cc  DQMHistogrammer.h  Makefile  README.md  SLinkDQMHistogrammer.cc  SLinkDQMHistogrammer.h  datatestFromfile.cc  miniDAQ.cc  miniDQM.cc  miniSLinkDQM.cc  publisher.cc  publisher.h
settings/: Beamtest_Nov15.xml  CBC3DescriptionIC.xml  CBC3_default.txt  CMTest2CBC.xml  CMTest8CBC.xml  CTADescription_2CBC.xml  Calibration2CBC.xml  Calibration8CBC.xml  Cbc3HWDescription.xml  Cbc_default_electron.txt  Cbc_default_hole.txt  Cbc_default_hole_d19c.txt  Cbc_default_irrad.txt  Commissioning.xml  Conf_calibratedLeft_MPA1_config1.xml  Conf_calibratedLeft_MPA2_config1.xml  Conf_calibratedLeft_MPA3_config1.xml  Conf_calibratedLeft_MPA4_config1.xml  Conf_calibratedLeft_MPA5_config1.xml  Conf_calibratedLeft_MPA6_config1.xml  Conf_calibratedRight_MPA1_config1.xml  Conf_calibratedRight_MPA2_config1.xml  Conf_calibratedRight_MPA3_config1.xml  Conf_calibratedRight_MPA4_config1.xml  Conf_calibratedRight_MPA5_config1.xml  Conf_calibratedRight_MPA6_config1.xml  Conf_calibrated_MPA6_config1.xml  Conf_default_MPA1_config1.xml  Conf_testing_MPA1_config1.xml  D19CDescription.xml  D19CDescription_forAntenna.xml  D19CHWDescription.xml  D19CHWDescription_electron.xml  FC7DAQHWDescription.xml  FNAL_TB.xml  GLIBDescription_2CBC.xml  GLIBDescription_8CBC.xml  GLIB_wTLU_HS_BP_example.conf  HWDescription.xsl  HWDescription_2CBC.json  (+21 more)
src/: .gitignore  Arduino.cc  CMakeLists.txt  Makefile  calibrate.cc  cbc3irrad.cc  cbc3test.cc  cmtest.cc  commission.cc  configure.cc  d19c_test.cc  datatest.cc  datatestFromfile.cc  fc7daqtest  fc7daqtest.cc  fpgaconfig.cc  fpgaconfig.cc~  hybridtest.cc  integratedtester.cc  interfacetest.cc  monitor.cc  pulseshape.cc  rtest  rtest.cc  stubtest.cc  systemtest.cc  test.cc  tpcalibration.cc
tools/: AntennaTester.cc  AntennaTester.h  BiasSweep.cc  BiasSweep.h  CMTester.cc  CMTester.h  CMakeLists.txt  Calibration.cc  Calibration.h  Channel.cc  Channel.h  Commissioning.cc  Commissioning.h  FastCalibration.cc  FastCalibration.h  HybridTester.cc  HybridTester.h  LatencyScan.cc  LatencyScan.h  Makefile  OldCalibration.cc  OldCalibration.h  PedeNoise.cc  PedeNoise.cc.bak  PedeNoise.h  PedeNoise.h.bak  PulseShape.cc  PulseShape.h  RegisterTester.cc  RegisterTester.h  SCurve.cc  SCurve.cc.bak  SCurve.h  SCurve.h.bak  ShortFinder.cc  ShortFinder.h  SignalScan.cc  SignalScan.cc.bak  SignalScan.h  SignalScanFit.cc  (+9 more)
webGUI/: action_calibration.php  action_commission.php  action_datatest.php  action_fpgaconfig.php  action_miniDAQ.php  calibration.php  commission.php  datatest.php  fpgaconfig.php  iteratecanvas.php  miniDAQ.php  writer.php
(+46 files in other folders)
